--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "fast-xml-parser": "^4.2.6",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.1.1",
